--- a/holomessage.html
+++ b/holomessage.html
@@ -11,48 +11,37 @@
 </head>
 <body onload="document.body.style.opacity='1'">
     <header>
-        <div id="logo">
-            <a href="index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
-            </a>
-        </div>
+        <span id="name"><a class="nav" href="index.html">Jacob Kinley</a></span>
+        <span id="resume"><a class="nav" href="assets/resume/resume.pdf">resume</a></span>
+        <span id="contact"><a class="nav" href="mailto:jdk1061@rit.edu">contact</a></span>
     </header>
-    <nav>
-    </nav>
     <main>
-        <div class="hologrid">
-            <h1>HoloLens Messenger</h1>
+        <h1>HoloLens Messenger</h1>
 
-            <h2>Overview</h2>
+        <h2>Overview</h2>
 
-            <p>Messaging apps are a staple of mobile devices. The layout and experience that is offered is consistent across phones and tablets, but what about the holographic space that devices like the HoloLens utilize? How would a messaging app use real space?</p>
+        <p>Messaging apps are a staple of mobile devices. The layout and experience that is offered is consistent across phones and tablets, but what about the holographic space that devices like the HoloLens utilize? How would a messaging app use real space?</p>
 
-            <h2>Why do this?</h2>
+        <h2>Why do this?</h2>
 
-            <p>I originally thought of this app when I attended a talk on campus about interaction paradigms and idioms and how they have changed over time. After the talk there was time set aside for a workshop period to create our own design paradigms/idioms. I have been infatuated with the HoloLens since its reveal, so I decided to create something for the unique space it provided.</p>
+        <p>I originally thought of this app when I attended a talk on campus about interaction paradigms and idioms and how they have changed over time. After the talk there was time set aside for a workshop period to create our own design paradigms/idioms. I have been infatuated with the HoloLens since its reveal, so I decided to create something for the unique space it provided.</p>
 
-            <h2>The Process</h2>
+        <h2>The Process</h2>
 
-            <img class="projectpic" id="taskflow" src="assets/hololens_messenger/user_taskflow.PNG" alt="User Taskflow">
+        <img class="projectpic" id="taskflow" src="assets/hololens_messenger/user_taskflow.PNG" alt="User Taskflow">
 
-            <p>When mapping out the basic functions that a user could perform, I had to think about where holograms would be placed in the environment. The placement of holograms had to make sense based on the action being performed. The user's vision can have a different focus based on the action being performed, so placement of holograms should reflect this placement of focus.</p>
+        <p>When mapping out the basic functions that a user could perform, I had to think about where holograms would be placed in the environment. The placement of holograms had to make sense based on the action being performed. The user's vision can have a different focus based on the action being performed, so placement of holograms should reflect this placement of focus.</p>
 
-            <h2>My Solution</h2>
+        <h2>My Solution</h2>
 
-            <figure>
-                <iframe id="holodemo" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
-                <figcaption>Interactive lo-fi prototype</figcaption>
-            </figure>
+        <figure>
+            <iframe id="holodemo" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
+            <figcaption>Interactive lo-fi prototype</figcaption>
+        </figure>
 
-            <p>In the above prototype, ui and holographic elements are placed in areas that reflect where the user's visual attention is focused. For a text message, the writing is the focus, so the hologram is front and center. For a call, vision isn't necessarily the focus, so the ui elements are off in the corner. For a video call, the video feed is in the center, but can be moved off to the side if needed.</p>
-
-        </div>
-
+        <p>In the above prototype, ui and holographic elements are placed in areas that reflect where the user's visual attention is focused. For a text message, the writing is the focus, so the hologram is front and center. For a call, vision isn't necessarily the focus, so the ui elements are off in the corner. For a video call, the video feed is in the center, but can be moved off to the side if needed.</p>
     </main>
     <footer>
-        <div id="footwrap">
-            <div>&copy Jacob Kinley | <a href="assets/resume/Kinley_resume_fall_2018_v3.pdf">Resume</a> | <a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
-        </div>
     </footer>
 </body>
 </html>
