--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="document.body.style.opacity='1'">
     <header>
-        <span id="name"><a class="nav" href="">Jacob Kinley</a></span>
+        <span id="name"><a class="nav" href="index.html">Jacob Kinley</a></span>
         <span id="resume"><a class="nav" href="assets/resume/resume.pdf">resume</a></span>
         <span id="contact"><a class="nav" href="mailto:jdk1061@rit.edu">contact</a></span>
     </header>
