--- a/pics.html
+++ b/pics.html
@@ -11,89 +11,78 @@
 </head>
 <body onload="document.body.style.opacity='1'">
     <header>
-        <div id="logo">
-            <a href="index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
-            </a>
-        </div>
+        <span id="name"><a class="nav" href="index.html">Jacob Kinley</a></span>
+        <span id="resume"><a class="nav" href="assets/resume/resume.pdf">resume</a></span>
+        <span id="contact"><a class="nav" href="mailto:jdk1061@rit.edu">contact</a></span>
     </header>
-    <nav></nav>
     <main>
-        <div class="picsgrid">
+        <h1>PICS UI Design</h1>
 
-            <h1>PICS UI Design</h1>
+        <figure>
+            <img class="projectpic" src="assets/pics/angular.PNG" alt="production code">
+            <figcaption>WIP production code</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/angular.PNG" alt="production code">
-                <figcaption>WIP production code</figcaption>
-            </figure>
+        <h2>Overview</h2>
 
-            <h2>Overview</h2>
+        <p>PAMS is a customer facing web application that enables users to manage the deinstallation, storage, and resale of their redundant telecommunication network hardware. I was brought on as a UI Design intern to help the IT team make PAMS more appealing to PICS customers in both look and feel.</p>
 
-            <p>PAMS is a customer facing web application that enables users to manage the deinstallation, storage, and resale of their redundant telecommunication network hardware. I was brought on as a UI Design intern to help the IT team make PAMS more appealing to PICS customers in both look and feel.</p>
+        <h2>The Problem</h2>
 
-            <h2>The Problem</h2>
+        <p>The old PAMS was unintuitive and resource intensive. Customers weren't using it because they found it was easier to just contact PICS directly if they needed something done. This cost PICS hours of personal customer service man-hours.</p>
 
-            <p>The old PAMS was unintuitive and resource intensive. Customers weren't using it because they found it was easier to just contact PICS directly if they needed something done. This cost PICS hours of personal customer service man-hours.</p>
+        <figure>
+            <img class="projectpic" src="assets/pics/pamsprojectinfo.png" alt="PAMS project info">
+            <figcaption>An example of the old PAMS interface (customer info blacked out).</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/pamsprojectinfo.png" alt="PAMS project info">
-                <figcaption>An example of the old PAMS interface (customer info blacked out).</figcaption>
-            </figure>
+        <h2>The Process</h2>
 
-            <h2>The Process</h2>
+        <figure>
+            <img class="projectpic" src="assets/pics/lofi_sketches.jpg" alt="sketches">
+            <figcaption>Sketches of various pages remade with Material Design in mind</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/lofi_sketches.jpg" alt="sketches">
-                <figcaption>Sketches of various pages remade with Material Design in mind</figcaption>
-            </figure>
+        <p>I started sketching basic pages with Google Material Design in mind. Material Design was an ideal choice for a design system for PAMS. Since I was only going to be available for the summer, the IT team needed a design system they could learn on their own and implement with pre-built components. The sketches helped me settle on basic layout ideas.</p>
 
-            <p>I started sketching basic pages with Google Material Design in mind. Material Design was an ideal choice for a design system for PAMS. Since I was only going to be available for the summer, the IT team needed a design system they could learn on their own and implement with pre-built components. The sketches helped me settle on basic layout ideas.</p>
+        <figure>
+            <img class="projectpic" src="assets/pics/lofi_dashboard.png" alt="lofi">
+            <figcaption>LoFi of the dashboard that users are greeted with when logging in.</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/lofi_dashboard.png" alt="lofi">
-                <figcaption>LoFi of the dashboard that users are greeted with when logging in.</figcaption>
-            </figure>
+        <p>LoFi prototypes were created to convey layout and navigation to the team. The team and I also noticed repeatedly that we didn't have enough requirements from the customers as to what information is necessary to display. I used LoFi designs to meet requirements as they came in because iteration was quick and easy.</p>
 
-            <p>LoFi prototypes were created to convey layout and navigation to the team. The team and I also noticed repeatedly that we didn't have enough requirements from the customers as to what information is necessary to display. I used LoFi designs to meet requirements as they came in because iteration was quick and easy.</p>
+        <figure>
+            <img class="projectpic" src="assets/pics/hifi2.png" alt="hifi dashboard">
+            <figcaption>First HiFi of the dashboard that users are greeted with when logging in.</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/hifi2.png" alt="hifi dashboard">
-                <figcaption>First HiFi of the dashboard that users are greeted with when logging in.</figcaption>
-            </figure>
+        <p>Working with Material Design made quick iterations easy, so continued work was done solely with HiFi prototypes.</p>
 
-            <p>Working with Material Design made quick iterations easy, so continued work was done solely with HiFi prototypes.</p>
+        <figure>
+            <img class="projectpic" src="assets/pics/hifi4.png" alt="hifi pages">
+            <figcaption>An iteration of the HiFi of multiple pages of the web app.</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/hifi4.png" alt="hifi pages">
-                <figcaption>An iteration of the HiFi of multiple pages of the web app.</figcaption>
-            </figure>
+        <figure>
+            <img class="projectpic" src="assets/pics/hifi8.png" alt="hifi pages">
+            <figcaption>One of the last iterations before development started.</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/hifi8.png" alt="hifi pages">
-                <figcaption>One of the last iterations before development started.</figcaption>
-            </figure>
+        <h2>The Result</h2>
 
-            <h2>The Result</h2>
+        <figure>
+            <img class="projectpic" src="assets/pics/angular.PNG" alt="production code">
+            <figcaption>WIP production code</figcaption>
+        </figure>
 
-            <figure>
-                <img class="projectpic" src="assets/pics/angular.PNG" alt="production code">
-                <figcaption>WIP production code</figcaption>
-            </figure>
+        <p>By the end of the internship, requirements were still messy, but development had to begin. I assisted with implementing Material Design in Angular. I took on the role of helping frontend development, so I was able to dabble in more web development as well as design.</p>
 
-            <p>By the end of the internship, requirements were still messy, but development had to begin. I assisted with implementing Material Design in Angular. I took on the role of helping frontend development, so I was able to dabble in more web development as well as design.</p>
+        <p>This was my first experience in making real designs for a real company. I learned how valuable it is to make sure requirements are as concrete as possible before starting designing. If I had better requirements at the beginning, I would have not needed to iterate as many times. My biggest takeaway from this experience was that I truly do like UI design. This internship killed any imposter syndrome I had.</p>
 
-            <p>This was my first experience in making real designs for a real company. I learned how valuable it is to make sure requirements are as concrete as possible before starting designing. If I had better requirements at the beginning, I would have not needed to iterate as many times. My biggest takeaway from this experience was that I truly do like UI design. This internship killed any imposter syndrome I had.</p>
-
-            <p>As of now I am still working part time at PICS Telecom to help the team complete the project and stick to the design I envisioned.</p>
-            
-        </div>
-
+        <p>As of now I am still working part time at PICS Telecom to help the team complete the project and stick to the design I envisioned.</p>
     </main>
     <footer>
-        <div id="footwrap">
-            <div>&copy Jacob Kinley | <a href="assets/resume/Kinley_resume_fall_2018_v3.pdf">Resume</a> | <a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
-        </div>
     </footer>
 </body>
 </html>
