--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <main>
         <h1>Hello! I'm Jacob Kinley. I design for humans.</h1>
         <h2>Projects</h2>
-        <div class="grid">
+        <div class="pgrid">
             <div class="project">
                 <h3>
                     PAMS UI Redesign
                 </h3>
                 <a href="pics.html"><img src="assets/pics/pamsblack.png"></a>
-                <p>Worked as a UI Design Intern to redesign an enterprise customer facing web application.</p>
+                <p>Worked as a UI Design Intern to redesign an enterprise, customer facing, web application.</p>
             </div>
             <div class="project">
                 <h3>
@@ -41,9 +41,14 @@
                 <p>Expanded on an idea for an augmented reality messenging app.</p>
             </div>
         </div>
+        <h2>Who am I?</h2>
+        <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I was originally studying computer science, but I was frequently more concerned with how someone was using a system rather than the system itself.</p>
+
+        <p>My interests in UX are currently focused on the field of AR and VR. It excites me that user interactions and experiences are no longer limited to a flat screen, but now focus on more spatial experiences. I want to make an impact in UX, and I feel that these new virtual spaces are the perfect place to do so.</p>
+
     </main>
     <footer>
-
+        &copy;jacobkinley
     </footer>
 </body>
 </html>
