--- a/holomessage.html
+++ b/holomessage.html
@@ -28,11 +28,15 @@
 
         <h2>The Process</h2>
 
-        <img class="projectpic" id="taskflow" src="assets/hololens_messenger/user_taskflow.PNG" alt="User Taskflow">
+        <figure>
+            <img class="projectpic" id="taskflow" src="assets/hololens_messenger/user_taskflow.PNG" alt="User Taskflow">
+            <figcaption>Possible userflows</figcaption>
+        </figure>
+        
 
         <p>When mapping out the basic functions that a user could perform, I had to think about where holograms would be placed in the environment. The placement of holograms had to make sense based on the action being performed. The user's vision can have a different focus based on the action being performed, so placement of holograms should reflect this placement of focus.</p>
 
-        <h2>My Solution</h2>
+        <h2>Lo-Fi</h2>
 
         <figure>
             <iframe id="holodemo" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
@@ -40,6 +44,10 @@
         </figure>
 
         <p>In the above prototype, ui and holographic elements are placed in areas that reflect where the user's visual attention is focused. For a text message, the writing is the focus, so the hologram is front and center. For a call, vision isn't necessarily the focus, so the ui elements are off in the corner. For a video call, the video feed is in the center, but can be moved off to the side if needed.</p>
+
+        <h2>Takeaways</h2>
+
+        <p>Designing for a 3D space in a 2D editor is less than ideal. I think future AR designs by me will be prototyped in a 3D space. I plan to try out a couple ideas soon.</p>
     </main>
     <footer>
     </footer>
