--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
                 <p>Worked as a UI Design Intern to redesign an enterprise, customer facing, web application.</p>
             </div>
             <div class="project">
-                <h3>
-                    Electoral
-                </h3>
-                <a href="electoral.html"><img src="assets/electoral/electoral.png"></a>
-                <p>Prototyped and tested a lofi and hifi of an app to keep track of elections worldwide.</p>
+                <iframe width="760px" height="500px" src="https://sway.com/s/q33HwLq7x5axx8te/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
             </div>
             <div class="project">
                 <h3>
