--- a/index.html
+++ b/index.html
@@ -16,35 +16,33 @@
         <span id="contact"><a class="nav" href="mailto:jdk1061@rit.edu">contact</a></span>
     </header>
     <main>
-        <h1>Hello! I'm Jacob Kinley. I design for humans.</h1>
-        <h2>Projects</h2>
+        <h1>Jacob Kinley is a UX designer and a 4th year Human-Centered Computing student 🎓 at Rochester Institute of Technology.</h1>
+        <h2>Works</h2>
         <div class="pgrid">
             <div class="project">
                 <h3>
-                    PAMS UI Redesign
+                    Car Dashboard
                 </h3>
-                <a href="pics.html"><img src="assets/pics/pamsblack.png"></a>
-                <p>Worked as a UI Design Intern to redesign an enterprise, customer facing, web application.</p>
-            </div>
-            <div class="project">
-                <iframe width="760px" height="500px" src="https://sway.com/s/q33HwLq7x5axx8te/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
+                <iframe width="100%" height="" src="https://sway.com/s/q33HwLq7x5axx8te/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
             </div>
             <div class="project">
                 <h3>
-                    Hololens Messenger
+                    PAMS
                 </h3>
-                <a href="holomessage.html"><img src="assets/hololens_messenger/holologo.png"></a>
-                <p>Expanded on an idea for an augmented reality messenging app.</p>
+                <iframe width="100%" height="" src="https://sway.com/s/q33HwLq7x5axx8te/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
+            </div>
+            <div class="project">
+                <h3>
+                    Electoral
+                </h3>
+                <iframe width="100%" height="" src="https://sway.com/s/q33HwLq7x5axx8te/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
             </div>
         </div>
-        <h2>Who am I?</h2>
-        <p>I’m a 4th year Human Centered Computing student at Rochester Institute of Technology. I was originally studying computer science, but I was frequently more concerned with how someone was using a system rather than the system itself.</p>
-
-        <p>My interests in UX are currently focused on the field of AR and VR. It excites me that user interactions and experiences are no longer limited to a flat screen, but now focus on more spatial experiences. I want to make an impact in UX, and I feel that these new virtual spaces are the perfect place to do so.</p>
-
+        <h2>About Me</h2>
+        <p>I used to have a Windows Phone, and I still miss it. This is a constant reminder to me that the norm is not always "good enough". Help me change that.</p>
     </main>
     <footer>
-        &copy;jacobkinley
+        &copy; Jacob Kinley
     </footer>
 </body>
 </html>
