--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="project">
                 <h3>
-                    Car Dashboard | Prototyping, User Research
+                    Car Dashboard and Console | Prototyping, User Research
                 </h3>
                 <iframe width="100%" src="https://sway.com/s/Hv7p8wxD58UzDBve/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
             </div>
