--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="pgrid">
             <div class="project">
                 <h3>
-                    PAMS | UI, Iteration
+                    PAMS | Prototyping, UI, Iterations
                 </h3>
                 <iframe width="100%" src="https://sway.com/s/1as8lT2aOhYufxz3/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
             </div>
