--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         <h2>About Me</h2>
-        <p>I used to have a Windows Phone, and I still miss it. This is a constant reminder to me that the norm is not always "good enough". Help me change that.</p>
+        <p>I used to have a Windows Phone, and I still miss it. I learned that good ideas can lose. Help me change that.</p>
     </main>
     <footer>
         &copy; Jacob Kinley
