--- a/test.html
+++ b/test.html
@@ -10,20 +10,22 @@
     </script>
 </head>
 <body>
-    <header>
-        <h1>Advice from Friends</h1>
-    </header>
-    <main>
-        <p>Keep in mind all HTML tags (tables [and all tags in them], headers, divs, spans, etc.)</p>
-        <p>You can loop through elementsByID - Useful for FOR loops</p>
-        <p>If swapping out text nodes, you should remove the current one before adding the new one</p>
-        <p>If looping through inputs, make sure you are targeting the right group of inputs</p>
-        <p>FOR loops are your best friend</p>
-        <p>If not HTML attribute, try addEventListener (attachEvent if IE)</p>
-        <p>Columns are just elements in every row</p>
-    </main>
-    <footer>
-        &copy; Jacob Kinley
-    </footer>
+    <div>
+        <header>
+            <h1>Advice from Friends</h1>
+        </header>
+        <main>
+            <p>Keep in mind all HTML tags (tables [and all tags in them], headers, divs, spans, etc.)</p>
+            <p>You can loop through elementsByID - Useful for FOR loops</p>
+            <p>If swapping out text nodes, you should remove the current one before adding the new one</p>
+            <p>If looping through inputs, make sure you are targeting the right group of inputs</p>
+            <p>FOR loops are your best friend</p>
+            <p>If not HTML attribute, try addEventListener (attachEvent if IE)</p>
+            <p>Columns are just elements in every row</p>
+        </main>
+        <footer>
+            &copy; Jacob Kinley
+        </footer>
+    </div>
 </body>
 </html>
