--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <img class="logo" src="assets/images/squareboxnoback.svg">
             <span><a href="index.html">Jacob Kinley</a></span>
-            <span><a href="assets/resume/resume.pdf">resume</a></span>
+            <span><a href="assets/resume/resume.pdf" target="_blank">resume</a></span>
             <span><a href="mailto:jdk1061@rit.edu">contact</a></span>
         </nav>
     </header>
