--- a/testIndex.html
+++ b/testIndex.html
@@ -8,59 +8,21 @@
     <link rel="stylesheet" href="assets/css/testStyle.css">
     <link rel="icon" href="">
 </head>
+<header>
+    <nav>
+        <h2 id='bio'>jk</h2>
+    </nav>
+</header>
 <body>
-    <section id='landing'>
-        <div class='category'>
-            <div class='box-label'>
-                <h2 id='bio'>jk</h2>
-            </div>
-        </div>
-        <div class="divider"></div>
+    <section>
         <div class='category'>
             <div class='box-label'>
                 <h2 id='ux'>ux</h2>
             </div>
-            <div class='box-label'>
-                <h2>p1</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p2</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p3</h2>
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class='category'>
-            <div class='box-label'>
-                <h2 id='cs'>cs</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p1</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p2</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p3</h2>
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class='category'>
-            <div class='box-label'>
-                <h2 id='threeD'>3d</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p1</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p2</h2>
-            </div>
-            <div class='box-label'>
-                <h2>p3</h2>
-            </div>
         </div>
     </section>
 </body>
-<footer>&copy; Jacob Kinley 2020</footer>
+<footer>
+    &copy;Jacob Kinley 2020
+</footer>
 </html>
