--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section id="intro">
-            <h2>Hello! I'm Jake. I'm a Human Centered Computing grad from RIT 🎓. I make user friendly designs with squares and boxes. <img class="logo" src="assets/images/squareboxnoback.svg"></h2>
+            <h2>Hi! I'm Jake and this is my portfolio.</h2>
         </section>
         <section id='projects'>
             <div class="content-card">
@@ -41,10 +41,7 @@
             <div class="content-card">
                 <div id="bio">
                     <h2 class='title2'>Bio</h2>
-                    <p>Computers are awesome. I've known this since I was a kid.</p>
-                    <p>Computers are cryptic. I learned this from watching my family, friends, and others constantly get frustrated by poorly designed experiences.</p>
-                    <p>I chose Human Centered Computing so that I could change the reality of computing.</p>
-                    <p>I’m looking for a full-time UX position. If you want to help me help users, <a href='mailto:jdk1061@rit.edu'>reach out!</a></p>
+                    <p>I recently graduated RIT with a B.S. in Human Centered Computing. I’m looking for a full-time UX position. If you want to help me help users, <a href='mailto:jdk1061@rit.edu'>reach out!</a></p>
                 </div>
             </div>
         </section>
