--- a/testIndex.html
+++ b/testIndex.html
@@ -21,6 +21,15 @@
             </div>
         </div>
     </section>
+    <section>
+        <svg class='box' viewBox='0 0 400 150'>
+            <rect width='100%' height='100%' fill='none' stroke='#444' stroke-width='2'/>
+            <rect width='1' height='1' fill='white' x='0' y='0'/>
+            <rect width='1' height='1' fill='white' x='399' y='0'/>
+            <rect width='1' height='1' fill='white' x='399' y='149'/>
+            <rect width='1' height='1' fill='white' x='0' y='149'/>
+        </svg>
+    </section>
 </body>
 <footer>
     &copy;Jacob Kinley 2020
