svg box w/ dots done

--- a/testIndex.html
+++ b/testIndex.html
@@ -22,13 +22,16 @@
         </div>
     </section>
     <section>
-        <svg class='box' viewBox='0 0 400 150'>
-            <rect width='100%' height='100%' fill='none' stroke='#444' stroke-width='2'/>
-            <rect width='1' height='1' fill='white' x='0' y='0'/>
-            <rect width='1' height='1' fill='white' x='399' y='0'/>
-            <rect width='1' height='1' fill='white' x='399' y='149'/>
-            <rect width='1' height='1' fill='white' x='0' y='149'/>
-        </svg>
+        <div class='box'>
+            <svg class='boxBack' viewBox='0 0 300 150'>
+                <rect width='100%' height='100%' fill='none' stroke='#444' stroke-width='2'/>
+                <rect width='1' height='1' fill='white' x='0' y='0'/>
+                <rect width='1' height='1' fill='white' x='299' y='0'/>
+                <rect width='1' height='1' fill='white' x='299' y='149'/>
+                <rect width='1' height='1' fill='white' x='0' y='149'/>
+            </svg>
+
+        </div>
     </section>
 </body>
 <footer>
