--- a/testIndex.html
+++ b/testIndex.html
@@ -21,20 +21,9 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class='box'>
-            <svg class='boxBack' viewBox='0 0 300 150'>
-                <rect width='100%' height='100%' fill='none' stroke='#444' stroke-width='2'/>
-                <rect width='1' height='1' fill='white' x='0' y='0'/>
-                <rect width='1' height='1' fill='white' x='299' y='0'/>
-                <rect width='1' height='1' fill='white' x='299' y='149'/>
-                <rect width='1' height='1' fill='white' x='0' y='149'/>
-            </svg>
-
-        </div>
-    </section>
+    Image credit: ESA/Hubble & NASA, I. Karachentsev
 </body>
-<footer>
+<!-- <footer>
     &copy;Jacob Kinley 2020
-</footer>
+</footer> -->
 </html>
