--- a/testIndex.html
+++ b/testIndex.html
@@ -4,24 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jacob Kinley</title>
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/testStyle.css">
     <link rel="icon" href="">
 </head>
 <header>
     <nav>
-        <h1>jk</h1>
+        <h1>jacob kinley</h1>
+        <a href="assets/resume/resume.pdf" target="_blank">resume</a>
+        <a href="mailto:jdkinley@outlook.com">contact</a>
     </nav>
 </header>
 <body>
     <section>
         <div class='category'>
-            <div class='box-label'>
-                <h2>ux</h2>
-            </div>
+            <h2>projects</h2>
         </div>
     </section>
-    Image credit: ESA/Hubble & NASA, I. Karachentsev
+    <!-- Image credit: ESA/Hubble & NASA, I. Karachentsev -->
 </body>
 <!-- <footer>
     &copy;Jacob Kinley 2020
