--- a/testIndex.html
+++ b/testIndex.html
@@ -9,18 +9,21 @@
 </head>
 <header>
     <nav>
-        <h1>jacob kinley</h1>
+        <a href="testindex.html">JK</a>
         <a href="assets/resume/resume.pdf" target="_blank">resume</a>
-        <a href="mailto:jdkinley@outlook.com">contact</a>
+        <!-- <a href="mailto:jdkinley@outlook.com">contact</a> -->
     </nav>
 </header>
 <body>
-    <section>
-        <div class='category'>
+    <div class='body-wrap'>
+        <section>
+            <h1>i am Jacob Kinley</h1>
+            <p></p>
+        </section>
+        <section>
             <h2>projects</h2>
-        </div>
-    </section>
-    <!-- Image credit: ESA/Hubble & NASA, I. Karachentsev -->
+        </section>
+    </div>
 </body>
 <!-- <footer>
     &copy;Jacob Kinley 2020
