--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         </section>
     </main>
     <footer>
-        <span><a href='index.html'>&copy Jacob Kinley</a></span>
-        <span><a href='mailto:jdk1061@rit.edu'>Email: jdk1061@rit.edu</a></span>
-        <span><a href='https://www.linkedin.com/in/jacob-kinley-906266131/'>LinkedIn</a></span>
+        <div class='footwrap'>
+            <span><a href='index.html'>&copy Jacob Kinley</a></span>
+            <span><a href='mailto:jdk1061@rit.edu'>Email: jdk1061@rit.edu</a></span>
+            <span><a href='https://www.linkedin.com/in/jacob-kinley-906266131/'>LinkedIn</a></span>
+        </div>
     </footer>
     <script src="scripts/zenscroll-latest/zenscroll-min.js"></script>
 </body>
