--- a/testIndex.html
+++ b/testIndex.html
@@ -9,17 +9,13 @@
 </head>
 <header>
     <nav>
-        <a href="testindex.html">JK</a>
+        <a href="testindex.html">jK</a>
         <a href="assets/resume/resume.pdf" target="_blank">resume</a>
         <!-- <a href="mailto:jdkinley@outlook.com">contact</a> -->
     </nav>
 </header>
 <body>
     <div class='body-wrap'>
-        <section>
-            <h1>i am Jacob Kinley</h1>
-            <p></p>
-        </section>
         <section>
             <h2>projects</h2>
         </section>
