--- a/index.html
+++ b/index.html
@@ -8,48 +8,12 @@
     <link rel="icon" href="assets/images/squarebox.svg">
 </head>
 <body>
-    <header>
-        <nav>
-            <img class="logo" src="assets/images/squareboxnoback.svg">
-            <span><a href="index.html">Jacob Kinley</a></span>
-            <span><a href="assets/resume/resume.pdf" target="_blank">resume</a></span>
-            <span><a href="mailto:jdkinley@outlook.com">contact</a></span>
-        </nav>
-    </header>
     <main>
-        <section id='projects'>
-            <div class="content-card">
-                <a class="image-link" href="warhammer-community-app/index.html"><img src="assets/images/wcmobileTN.png"></a>
-                <a href="warhammer-community-app/index.html">Warhammer Community App</a>
-                <p>Mobile app of the Warhammer Community Website</p>
-            </div>
-            <div class="content-card">
-                <a class="image-link" href="pics-pams/index.html"><img src="assets/images/picspamsTN.png"></a>
-                <a href="pics-pams/index.html">PICS Asset Management Services</a>
-                <p>Front-end web app design for PICS Telecom</p>
-            </div>
-            <div class="content-card">
-                <a class="image-link" href="car-dash-console/index.html"><img src="assets/images/carTN.png"></a>
-                <a href="car-dash-console//index.html">Car Dashboard & Console UI Design</a>
-                <p>Electric car dashboard and center console design</p>
-            </div>
-        </section>
-        <section>
-            <div class="content-card">
-                <div id="bio">
-                    <h2 class='title2'>Bio</h2>
-                    <p>I recently graduated RIT with a B.S. in Human Centered Computing. I’m looking for a full-time UX position. If you want to help me help users, <a href='mailto:jdk1061@rit.edu'>reach out!</a></p>
-                </div>
-            </div>
-        </section>
+        <h1>Hi, I'm Jacob Kinley!</h1>
+        <p>I'm currently working as a freelance UX Designer. In my free time I'm making a tabletop wargame. If you want to contact me, you can email me at: jacob (at) innoviacolabs.com</p>
     </main>
     <footer>
-        <div class='footwrap'>
-            <span><a href='index.html'>&copy Jacob Kinley</a></span>
-            <span><a href='mailto:jdk1061@rit.edu'>Email: jdk1061@rit.edu</a></span>
-            <span><a href='https://www.linkedin.com/in/jacob-kinley-906266131/'>LinkedIn</a></span>
-        </div>
+        &copy 2021 Jacob Kinley
     </footer>
-    <script src="scripts/zenscroll-latest/zenscroll-min.js"></script>
 </body>
 </html>
