Update home copy

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jacob Kinley</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" href="assets/images/squarebox.svg">
+    <!-- <link rel="icon" href="assets/images/squarebox.svg"> -->
 </head>
 <body>
     <main>
         <h1>Hi, I'm Jacob Kinley!</h1>
-        <p>I'm currently working as a freelance UX Designer. In my free time I'm making a tabletop wargame. If you want to contact me, you can email me at: jacob (at) innoviacolabs.com</p>
+        <p>I'm currently working as a freelance UX Designer. My most recent work is under NDA. Contact me at jdkinley (at) outlook.com.</p>
     </main>
     <footer>
         &copy 2021 Jacob Kinley
