--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <main>
         <h1>Hi, I'm Jacob Kinley!</h1>
-        <p>I'm currently working as a freelance UX Designer. My most recent work is under NDA. Contact me at jdkinley (at) outlook.com.</p>
+        <p>I'm currently working as a freelance UX Designer. Contact me at jdkinley (at) outlook.com.</p>
+        <a href="assets/Portfolio Deck.pdf">Portfolio Deck</a>
     </main>
     <footer>
-        &copy 2022 Jacob Kinley
+        &copy 2023 Jacob Kinley
     </footer>
 </body>
 </html>
