--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <main>
         <h1>Hi, I'm Jacob Kinley!</h1>
-        <p>I'm currently working as a freelance UX Designer. Contact me at jdkinley (at) outlook.com.</p>
+        <p>I'm currently working as a freelance UX Designer.</p>
+        <p>Contact me at jdkinley (at) outlook.com.</p>
         <a href="assets/Portfolio Deck.pdf">Portfolio Deck</a>
     </main>
     <footer>
