--- a/conceptDiscovery.html
+++ b/conceptDiscovery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley</title>
+    <title>Concept Discovery  | Jacob Kinley</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- <link rel="icon" href="assets/images/squarebox.svg"> -->
 </head>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <section class="intro">
-        <p>Hello! I'm Jacob Kinley. I design for the web.</p>
+        <p>I am a UX Designer, generally interested in aligning business goals with user needs.</p>
     </section>
     <section>
         <div class="section-title">
@@ -28,7 +28,7 @@
         <div class="flex-column">
             <div class="container">
                 <h3>
-                    <a href="conceptDiscovery.html">Concept Discovery</a>
+                    <a href="">Concept Discovery</a>
                 </h3>
                 <p>I worked 1-on-1 with a client to help define their concept app.</p>
             </div>
