black and white and boxes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <section class="intro">
-        <p>Hello! I'm Jacob Kinley. I design for the web.</p>
+        <p>Hello! I'm Jake Kinley and I design UX.</p>
     </section>
     <section>
         <div class="section-title">
@@ -26,29 +26,32 @@
             <p>A curated list of past work.</p>
         </div>
         <div class="flex-column">
-            <div class="container">
-                <h3>
-                    <a href="conceptDiscovery.html">Concept Discovery</a>
-                </h3>
-                <p>I worked 1-on-1 with a client to help define their concept app.</p>
+            <div class="container-border">
+                <div class="dbox"></div>
+                <div class="container">
+                    <h3>
+                        <a href="conceptDiscovery.html">Concept Discovery</a>
+                    </h3>
+                    <p>I worked 1-on-1 with a client to help define their concept app.</p>
+                </div>
             </div>
-            <div class="container">
-                <h3>
-                    <a href="">Storyboard Business Direction</a>
-                </h3>
-                <p>I helped a client decide their best path forward with a business.</p>
+            <div class="container-border">
+                <div class="dbox"></div>
+                <div class="container">
+                    <h3>
+                        <a href="">Storyboard Business Direction</a>
+                    </h3>
+                    <p>I helped a client decide their best path forward with a business.</p>
+                </div>
             </div>
-            <div class="container">
-                <h3>
-                    <a href="">Webapp to Mobile</a>
-                </h3>
-                <p>This is a redesign of a webapp for mobile devices done for a large local crypto client.</p>
-            </div>
-            <div class="container">
-                <h3>
-                    <a href="">Customer Portal</a>
-                </h3>
-                <p>I assisted in designing a customer portal for a large medtech client.</p>
+            <div class="container-border">
+                <div class="dbox"></div>
+                <div class="container">
+                    <h3>
+                        <a href="">Webapp to Mobile</a>
+                    </h3>
+                    <p>This is a redesign of a webapp for mobile devices done for a large local crypto client.</p>
+                </div>
             </div>
         </div>
     </section>
